cmake_minimum_required(VERSION 3.10)

project(HotelManagementSystem VERSION 1.0)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

include_directories(include)

add_executable(HotelSystem
    main.cpp
    src/presentation.cpp
    src/services.cpp
    src/domains.cpp
    src/containers.cpp
)